# JNITDOM-EncryptOrDecryptFile-Reborn

JNI/: CMakeLists.txt  build.cmd  indi_blazing_stellar_jni_TDOMEncryptOrDecryptFileReborn.cpp
JNI/JNIinclude/: indi_blazing_stellar_jni_TDOMEncryptOrDecryptFileReborn_StateDataWorker.h
JNI/src/indi/blazing/stellar/jni/TDOMEncryptOrDecryptFileReborn/: StateDataWorker.java
include/CommonSecurity/: SecureRandomUtilLibrary.hpp
include/CustomSecurity/: CryptionWorker.hpp
